# Yumi-Sugoi

./: .env.example  .gitignore  CHANGELOG.md  COMMIT_MESSAGE.md  LICENSE  MANIFEST.in  PRIVACY.md  README.md  TERMS.md  UPDATE_SUMMARY.md  commit_changes.ps1  generate_api_token.py  init.sql  pyproject.toml  pytest.ini  requirements.txt  run_api.py  run_bot.py  setup.py  start_yumi.py
.github/workflows/: ci-cd.yml  ci.yml  release.yml
api/: README.md  __init__.py  api_tokens.json.example  app_fixed.py  app_unified.py  auth.py  error_handling.py  init_db.py  migrate.py  requirements-test.txt  requirements.txt  routes_active.py  routes_admin.py  routes_bot.py  routes_commands.py  routes_personas.py  routes_qa.py  routes_servers.py  routes_users.py  security.py
bot_core/: __init__.py  api_integration.py  commands.py  datasets.py  feedback.py  history.py  image_caption.py  llm.py  main.py  persona.py  status_publisher.py  web_dashboard.py  websearch.py  yumi_vision.py
bot_core/static/: dashboard.css  dashboard.js  debug.css
bot_core/templates/: dashboard.html
datasets/: README.txt
docker/: Dockerfile  Dockerfile.test  docker-compose.ci.yml  docker-compose.yml  nginx.conf
tests/: conftest.py  test_package.py
